<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobilecrowdsourceStudy.nctu.minuku_2.controller.study"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/article_heading"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:gravity="center"
        android:text="群眾外包"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <View
        android:id="@+id/divider_article_head"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_heading"
        />


    <!--<TextView-->
        <!--android:id="@+id/article_heading"-->
        <!--android:text="群眾外包"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:textSize="20dp"-->
        <!--/>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/article_heading">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_subtitle"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/article_text" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/goal"
                android:textAppearance="@android:style/TextAppearance"/>
            <TextView
                android:id="@+id/goal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/goal_text" />
        </LinearLayout>
    </ScrollView>

    </android.support.constraint.ConstraintLayout>