<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobilecrowdsourceStudy.nctu.minuku_2.controller.study"
    xmlns:tools="http://schemas.android.com/tools">




    <!--<TextView-->
    <!--android:id="@+id/article_heading"-->
    <!--android:text="群眾外包"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:textSize="20dp"-->
    <!--/>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/note_head"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/note_text" />

            <TextView
                android:id="@+id/information_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="聯繫資訊"
                android:textAppearance="@android:style/TextAppearance"/>
            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/information"
                android:textAppearance="@android:style/TextAppearance"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>